// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leads Snapshots > renders leads empty state - snapshot 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      class="flex items-start justify-between"
    >
      <div>
        <h1
          class="text-2xl font-semibold tracking-tight"
        >
          Pipeline
        </h1>
        <p
          class="text-sm text-muted-foreground"
        >
          0
           leads en el pipeline
        </p>
      </div>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 rounded-md h-9 px-4"
      >
        <svg
          class="lucide lucide-plus w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Nuevo Lead
      </button>
    </div>
    <div
      class="overflow-x-auto pb-4 -mx-4 px-4 md:mx-0 md:px-0"
    >
      <div
        class="flex md:grid md:grid-cols-5 gap-3 h-[calc(100vh-12rem)] min-w-max md:min-w-0"
      >
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-blue-400"
              >
                <svg
                  class="lucide lucide-users w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="9"
                    cy="7"
                    r="4"
                  />
                  <path
                    d="M22 21v-2a4 4 0 0 0-3-3.87"
                  />
                  <path
                    d="M16 3.13a4 4 0 0 1 0 7.75"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-blue-400"
              >
                Nuevos
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-blue-400 bg-current/10"
              >
                0
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              Primer contacto
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="text-center py-16 text-muted-foreground/40 text-xs"
            >
              Sin leads
            </div>
          </div>
        </div>
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-amber-400"
              >
                <svg
                  class="lucide lucide-star w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-amber-400"
              >
                Interesados
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-amber-400 bg-current/10"
              >
                0
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              Mostró interés
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="text-center py-16 text-muted-foreground/40 text-xs"
            >
              Sin leads
            </div>
          </div>
        </div>
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-red-400"
              >
                <svg
                  class="lucide lucide-flame w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-red-400"
              >
                Calientes
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-red-400 bg-current/10"
              >
                0
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              Listo para comprar
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="text-center py-16 text-muted-foreground/40 text-xs"
            >
              Sin leads
            </div>
          </div>
        </div>
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-emerald-400"
              >
                <svg
                  class="lucide lucide-circle-check-big w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21.801 10A10 10 0 1 1 17 3.335"
                  />
                  <path
                    d="m9 11 3 3L22 4"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-emerald-400"
              >
                Clientes
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-emerald-400 bg-current/10"
              >
                0
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              Ya compró
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="text-center py-16 text-muted-foreground/40 text-xs"
            >
              Sin leads
            </div>
          </div>
        </div>
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-gray-500"
              >
                <svg
                  class="lucide lucide-ghost w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 10h.01"
                  />
                  <path
                    d="M15 10h.01"
                  />
                  <path
                    d="M12 2a8 8 0 0 0-8 8v12l3-3 2.5 2.5L12 19l2.5 2.5L17 19l3 3V10a8 8 0 0 0-8-8z"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-gray-500"
              >
                Fantasmas
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-gray-500 bg-current/10"
              >
                0
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              +7 días sin respuesta
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="text-center py-16 text-muted-foreground/40 text-xs"
            >
              Sin leads
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Leads Snapshots > renders leads error state - snapshot 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center h-[60vh] gap-3"
  >
    <svg
      class="lucide lucide-circle-alert w-8 h-8 text-destructive/70"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <p
      class="text-sm text-muted-foreground"
    >
      No se pudieron cargar los leads
    </p>
    <p
      class="text-xs text-destructive/70"
    >
      Error
    </p>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Leads Snapshots > renders leads loading state - snapshot 1`] = `
<div>
  <div
    class="flex items-center justify-center h-[60vh]"
  >
    <svg
      class="lucide lucide-loader-circle w-6 h-6 animate-spin text-primary"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Leads Snapshots > renders leads pipeline - snapshot 1`] = `
<div>
  <div
    class="space-y-6"
  >
    <div
      class="flex items-start justify-between"
    >
      <div>
        <h1
          class="text-2xl font-semibold tracking-tight"
        >
          Pipeline
        </h1>
        <p
          class="text-sm text-muted-foreground"
        >
          4
           leads en el pipeline
        </p>
      </div>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 rounded-md h-9 px-4"
      >
        <svg
          class="lucide lucide-plus w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        Nuevo Lead
      </button>
    </div>
    <div
      class="overflow-x-auto pb-4 -mx-4 px-4 md:mx-0 md:px-0"
    >
      <div
        class="flex md:grid md:grid-cols-5 gap-3 h-[calc(100vh-12rem)] min-w-max md:min-w-0"
      >
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-blue-400"
              >
                <svg
                  class="lucide lucide-users w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="9"
                    cy="7"
                    r="4"
                  />
                  <path
                    d="M22 21v-2a4 4 0 0 0-3-3.87"
                  />
                  <path
                    d="M16 3.13a4 4 0 0 1 0 7.75"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-blue-400"
              >
                Nuevos
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-blue-400 bg-current/10"
              >
                1
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              Primer contacto
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="group p-3 rounded-xl bg-card border border-border/30 cursor-pointer transition-all hover:border-violet-500/50 hover:shadow-md hover:shadow-violet-500/10 hover:bg-card/80"
              draggable="true"
            >
              <div
                class="flex items-start gap-3"
              >
                <button
                  class="w-10 h-10 rounded-full shrink-0 overflow-hidden cursor-default"
                >
                  <div
                    class="w-full h-full bg-gradient-to-br from-violet-600 to-purple-600 flex items-center justify-center text-white text-xs font-medium"
                  >
                    NL
                  </div>
                </button>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="font-medium text-sm truncate"
                    >
                      New Lead
                    </p>
                  </div>
                  <p
                    class="text-xs text-muted-foreground flex items-center gap-1"
                  >
                    <svg
                      class="lucide lucide-send w-3 h-3"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                      />
                      <path
                        d="m21.854 2.147-10.94 10.939"
                      />
                    </svg>
                    <span
                      class="truncate"
                    >
                      @
                      New Lead
                    </span>
                  </p>
                </div>
                <div
                  class="flex flex-col items-end shrink-0 text-muted-foreground"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 opacity-0 group-hover:opacity-100 transition-opacity shrink-0"
                  data-state="closed"
                  id="radix-:r0:"
                  type="button"
                >
                  <svg
                    class="lucide lucide-ellipsis w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-amber-400"
              >
                <svg
                  class="lucide lucide-star w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-amber-400"
              >
                Interesados
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-amber-400 bg-current/10"
              >
                1
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              Mostró interés
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="group p-3 rounded-xl bg-card border border-border/30 cursor-pointer transition-all hover:border-violet-500/50 hover:shadow-md hover:shadow-violet-500/10 hover:bg-card/80"
              draggable="true"
            >
              <div
                class="flex items-start gap-3"
              >
                <button
                  class="w-10 h-10 rounded-full shrink-0 overflow-hidden hover:ring-2 hover:ring-violet-500 cursor-pointer"
                  title="Abrir @activelead"
                >
                  <div
                    class="w-full h-full bg-gradient-to-br from-violet-600 to-purple-600 flex items-center justify-center text-white text-xs font-medium"
                  >
                    AL
                  </div>
                </button>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="font-medium text-sm truncate"
                    >
                      Active Lead
                    </p>
                    <svg
                      class="lucide lucide-external-link w-3 h-3 text-muted-foreground/50 opacity-0 group-hover:opacity-100"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15 3h6v6"
                      />
                      <path
                        d="M10 14 21 3"
                      />
                      <path
                        d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                      />
                    </svg>
                  </div>
                  <p
                    class="text-xs text-muted-foreground flex items-center gap-1"
                  >
                    <svg
                      class="lucide lucide-instagram w-3 h-3"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="20"
                        rx="5"
                        ry="5"
                        width="20"
                        x="2"
                        y="2"
                      />
                      <path
                        d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
                      />
                      <line
                        x1="17.5"
                        x2="17.51"
                        y1="6.5"
                        y2="6.5"
                      />
                    </svg>
                    <span
                      class="truncate"
                    >
                      @
                      Active Lead
                    </span>
                  </p>
                </div>
                <div
                  class="flex flex-col items-end shrink-0 text-muted-foreground"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 opacity-0 group-hover:opacity-100 transition-opacity shrink-0"
                  data-state="closed"
                  id="radix-:r2:"
                  type="button"
                >
                  <svg
                    class="lucide lucide-ellipsis w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-red-400"
              >
                <svg
                  class="lucide lucide-flame w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-red-400"
              >
                Calientes
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-red-400 bg-current/10"
              >
                1
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              Listo para comprar
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="group p-3 rounded-xl bg-card border border-border/30 cursor-pointer transition-all hover:border-violet-500/50 hover:shadow-md hover:shadow-violet-500/10 hover:bg-card/80"
              draggable="true"
            >
              <div
                class="flex items-start gap-3"
              >
                <button
                  class="w-10 h-10 rounded-full shrink-0 overflow-hidden hover:ring-2 hover:ring-violet-500 cursor-pointer"
                  title="Abrir @hotlead"
                >
                  <div
                    class="w-full h-full bg-gradient-to-br from-violet-600 to-purple-600 flex items-center justify-center text-white text-xs font-medium"
                  >
                    HL
                  </div>
                </button>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="font-medium text-sm truncate"
                    >
                      Hot Lead
                    </p>
                    <svg
                      class="lucide lucide-external-link w-3 h-3 text-muted-foreground/50 opacity-0 group-hover:opacity-100"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15 3h6v6"
                      />
                      <path
                        d="M10 14 21 3"
                      />
                      <path
                        d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                      />
                    </svg>
                  </div>
                  <p
                    class="text-xs text-muted-foreground flex items-center gap-1"
                  >
                    <svg
                      class="lucide lucide-instagram w-3 h-3"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="20"
                        rx="5"
                        ry="5"
                        width="20"
                        x="2"
                        y="2"
                      />
                      <path
                        d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
                      />
                      <line
                        x1="17.5"
                        x2="17.51"
                        y1="6.5"
                        y2="6.5"
                      />
                    </svg>
                    <span
                      class="truncate"
                    >
                      @
                      Hot Lead
                    </span>
                  </p>
                </div>
                <div
                  class="flex flex-col items-end shrink-0 text-muted-foreground"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 opacity-0 group-hover:opacity-100 transition-opacity shrink-0"
                  data-state="closed"
                  id="radix-:r4:"
                  type="button"
                >
                  <svg
                    class="lucide lucide-ellipsis w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-emerald-400"
              >
                <svg
                  class="lucide lucide-circle-check-big w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21.801 10A10 10 0 1 1 17 3.335"
                  />
                  <path
                    d="m9 11 3 3L22 4"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-emerald-400"
              >
                Clientes
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-emerald-400 bg-current/10"
              >
                1
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              Ya compró
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="group p-3 rounded-xl bg-card border border-border/30 cursor-pointer transition-all hover:border-violet-500/50 hover:shadow-md hover:shadow-violet-500/10 hover:bg-card/80"
              draggable="true"
            >
              <div
                class="flex items-start gap-3"
              >
                <button
                  class="w-10 h-10 rounded-full shrink-0 overflow-hidden hover:ring-2 hover:ring-violet-500 cursor-pointer"
                  title="Abrir @customer"
                >
                  <div
                    class="w-full h-full bg-gradient-to-br from-violet-600 to-purple-600 flex items-center justify-center text-white text-xs font-medium"
                  >
                    C
                  </div>
                </button>
                <div
                  class="flex-1 min-w-0"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <p
                      class="font-medium text-sm truncate"
                    >
                      Customer
                    </p>
                    <svg
                      class="lucide lucide-external-link w-3 h-3 text-muted-foreground/50 opacity-0 group-hover:opacity-100"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15 3h6v6"
                      />
                      <path
                        d="M10 14 21 3"
                      />
                      <path
                        d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
                      />
                    </svg>
                  </div>
                  <p
                    class="text-xs text-muted-foreground flex items-center gap-1"
                  >
                    <svg
                      class="lucide lucide-instagram w-3 h-3"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <rect
                        height="20"
                        rx="5"
                        ry="5"
                        width="20"
                        x="2"
                        y="2"
                      />
                      <path
                        d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
                      />
                      <line
                        x1="17.5"
                        x2="17.51"
                        y1="6.5"
                        y2="6.5"
                      />
                    </svg>
                    <span
                      class="truncate"
                    >
                      @
                      Customer
                    </span>
                  </p>
                </div>
                <div
                  class="flex flex-col items-end shrink-0 text-muted-foreground"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="menu"
                  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-7 w-7 opacity-0 group-hover:opacity-100 transition-opacity shrink-0"
                  data-state="closed"
                  id="radix-:r6:"
                  type="button"
                >
                  <svg
                    class="lucide lucide-ellipsis w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="19"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="5"
                      cy="12"
                      r="1"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex flex-col rounded-2xl overflow-hidden w-64 md:w-auto shrink-0 md:shrink bg-card/50 border border-border/50"
        >
          <div
            class="px-4 py-3 border-b border-border/30"
          >
            <div
              class="flex items-center gap-2"
            >
              <span
                class="opacity-80 text-gray-500"
              >
                <svg
                  class="lucide lucide-ghost w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9 10h.01"
                  />
                  <path
                    d="M15 10h.01"
                  />
                  <path
                    d="M12 2a8 8 0 0 0-8 8v12l3-3 2.5 2.5L12 19l2.5 2.5L17 19l3 3V10a8 8 0 0 0-8-8z"
                  />
                </svg>
              </span>
              <span
                class="font-semibold text-sm text-gray-500"
              >
                Fantasmas
              </span>
              <span
                class="text-xs font-semibold px-2 py-0.5 rounded-full ml-auto text-gray-500 bg-current/10"
              >
                0
              </span>
            </div>
            <p
              class="text-xs text-muted-foreground mt-1"
            >
              +7 días sin respuesta
            </p>
          </div>
          <div
            class="flex-1 overflow-auto p-2 space-y-2"
          >
            <div
              class="text-center py-16 text-muted-foreground/40 text-xs"
            >
              Sin leads
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;
